--- a/portfolio-item.html
+++ b/portfolio-item.html
@@ -41,13 +41,13 @@
 			<a href="index.html">Home</a>
 			</li>
 			<li>
-			<a href="portfolio-item.html">Singe Project</a>
+			<a href="portfolio-item.html">Portfolio</a>
 			</li>
 			<li>
-			<a href="page-sample.html">Page Sample</a>
+			<a href="page-sample.html">Client Gallery</a>
 			</li>
 			<li>
-			<a href="contact.html">Hire me</a>
+			<a href="contact.html">Contact</a>
 			</li>
 		</ul>
 	</div>
